Fixed spacing issue with timeline

--- a/docroot/themes/custom/uids_base/scss/components/timeline.scss
+++ b/docroot/themes/custom/uids_base/scss/components/timeline.scss
@@ -14,6 +14,9 @@
 .timeline--wrapper {
   position: relative;
   list-style: none;
+  .card__details {
+    margin: 0;
+  }
   .card__icon {
     position: absolute;
     font-size: 25px;
